--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@fontsource/poppins": "^4.5.8",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "sass": "^1.53.0"
   },
   "scripts": {
